Fix overflow of text in markdown sections at 400% zoom

--- a/app/webpacker/styles/markdown.scss
+++ b/app/webpacker/styles/markdown.scss
@@ -6,6 +6,7 @@
 
   > * {
     @include indent-left-and-right;
+    box-sizing: border-box;
   }
 
   // allow level two headings (blue boxes) and CTAs to 'overhang' on the left
